--- a/manifest.json
+++ b/manifest.json
@@ -26,7 +26,7 @@
       "sizes": "512x512",
       "type": "image/png"
     }],
-  "start_url": "www.mattjlowe.com/index.html",
+  "start_url": "https://www.mattjlowe.com/kings/index.html",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#333"
